--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,6 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.14"
-  },
-  "dependencies": {
-    "dotenv": "^17.3.1",
-    "express": "^5.2.1"
+    "test": "nodemon index.js"
   }
 }
