--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,12 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon index.js"
+  },
+  "dependencies": {
+    "dotenv": "^17.3.1",
+    "ejs": "^4.0.1",
+    "express": "^5.2.1",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.2.3"
   }
 }
