--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,18 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "Mihir",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
+    "body-parser": "^2.2.2",
     "dotenv": "^17.3.1",
-    "ejs": "^4.0.1",
     "express": "^5.2.1",
-    "mongodb": "^7.1.0",
     "mongoose": "^9.2.3"
   }
 }
